<resources>
    <string name="app_name">Cookbook</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_plan">PlanActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="password2">Check Password</string>
    <string name="name">Username</string>
    <string name="title_planer">Planer</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_discover">Discover</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="discover">Discover</string>
    <string name="planer">Planer</string>
    <string name="actionbar_settings">Menu</string>
    <string name="actionbar_logout">Logout</string>
    <string name="actionbar_account">Account Settings</string>
    <string name="ingredients">Ingredients</string>
    <string name="description">Description</string>
    <string name="recipe_title">Insert Recipe Title</string>
    <string name="insert_description">Insert Description</string>
    <string name="portions">Portions</string>
    <string name="Decrement">-</string>
    <string name="Increment">+</string>
    <string name="DefaultPortion">4</string>
    <string name="addIngredient">Add Ingredient</string>
    <string name="IngredientName">Name</string>
    <string name="unit">Unit</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="amount">Amount</string>
    <string name="dislike">Dislike</string>
    <string name="reload">Reload</string>
    <string name="like">Like</string>
    <string name="NewBook">New Book</string>
    <string name="BookName">Name</string>
    <string name="AddIngTitle">Ingredient</string>
    <string name="Password_not_Match">Passwords do not match!</string>
    <string name="Error">\"Oops, something went wrong!\"</string>
    <string name="NewRecipe">New Recipe</string>
    <string name="choose_recipe_title">Recipe</string>
    <string name="choose_date_title">Date</string>
    <string name="input_persons_title">Persons</string>
    <string name="welcome">Welcome</string>
    <string name="defaultBook">Default</string>
    <string name="add_recipe_to_calendar">Add recipe to calendar</string>
    <string name="edit">Edit</string>
    <string name="change">Change</string>
    <string name="DeleteBookName">Delete Book</string>
    <string name="EnterNewBookName">Enter New Book Name</string>
    <string name="delete">Delete</string>
    <string name="DeleteBookMessage">Are you sure?</string>
    <string name="MoveBookMessage">Select new book:</string>
    <string name="RecipeGeneralSettings">Recipe Settings</string>
    <string name="move">Move</string>
    <string name="minPasswordLength">The password needs at least six characters.</string>
    <string name="forgetPassword">Forgot Password</string>
    <string name="checkMail">Check your Mail.</string>
    <string name="enterMail">Please enter your Mail.</string>
    <string name="showRecipe">Show Recipe</string>
    <string name="editMarker">Edit</string>
    <string name="deleteMarker">Delete</string>
    <string name="EventOptions">Event Options</string>


    <string-array name="units_short_array">
        <item>tsp</item>
        <item>l</item>
        <item>ml</item>
        <item>g</item>
        <item>kg</item>
        <item>tbsp</item>
        <item>cup</item>
        <item>lb</item>
        <item>mg</item>
    </string-array>

    <string-array name="units_long_array">
        <item>tsp</item>
        <item>l</item>
        <item>ml</item>
        <item>g</item>
        <item>kg</item>
        <item>tbsp</item>
        <item>cup</item>
        <item>lb</item>
        <item>mg</item>
    </string-array>


    <!-- UNITS -->

</resources>
