<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    tools:context="com.hwr.cookbook.UI.LoginActivity">


    <ImageView
        android:id="@+id/icon"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:srcCompat="@drawable/ic_person_outline_80dp"/>

    <TextView
        android:id="@+id/heading"
        android:layout_below="@+id/icon"
        style="@style/HeadingTextStyle"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"/>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/viewMail"
        android:layout_below="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin = "@dimen/activity_horizontal_margin"
        >

        <AutoCompleteTextView
            android:id="@+id/textMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/mail" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/viewMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayout"
        android:layout_margin = "@dimen/activity_horizontal_margin"
        >

        <AutoCompleteTextView
            android:id="@+id/textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <View android:id="@+id/fakeView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"/>


    <Button

        android:id="@+id/user_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textInputLayout"
        android:text="@string/login"
        android:layout_alignRight="@+id/fakeView"
        android:layout_alignEnd="@+id/fakeView"

        android:layout_margin = "@dimen/activity_horizontal_margin"
        />

    <Button
        android:id="@+id/user_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fakeView"
        android:layout_alignParentRight="true"

        android:layout_below="@+id/textInputLayout"
        android:text="@string/register"
        android:layout_alignStart="@+id/fakeView"
        android:layout_alignParentEnd="true"

        android:layout_margin = "@dimen/activity_horizontal_margin"/>

    <Button
        android:id="@+id/forgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_register"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/forgetPassword" />


</RelativeLayout>
