<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/content_padding_normal">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom">


    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

    <AutoCompleteTextView
        android:id="@+id/amountInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        />

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/ingredientUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/units_short_array"
        android:prompt="@string/unit"
        android:layout_gravity="center"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <AutoCompleteTextView
            android:id="@+id/ingredientName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/IngredientName" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>






</FrameLayout>