<RelativeLayout
    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
    android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/appBarLayout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/appBarLayout">

        <RelativeLayout
            android:id="@+id/recipeRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/ImageIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>


            <TextView
                android:id="@+id/RecipeTitle"
                style="@style/TitleTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ImageIcon"
                android:enabled="false"
                android:text="Lorem ipsum" />

            <RatingBar
                android:id="@+id/RecipeRatingBar"
                style="@android:style/Widget.Holo.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/RecipeTitle"
                android:numStars="5"
                android:rating="3"
                android:clickable="false"/>


            <TextView
                android:id="@+id/portionsText"
                style="@style/HeadingTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/portions"
                android:layout_below="@+id/RecipeRatingBar"
                />


            <Button
                android:id="@+id/buttonDecrement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/portionsText"
                android:text="@string/Decrement" />

            <TextView
                android:id="@+id/Portions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/portionsText"
                android:layout_toEndOf="@+id/buttonDecrement"
                android:layout_toRightOf="@+id/buttonDecrement"/>

            <Button
                android:id="@+id/buttonIncrement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Increment"
                android:layout_below="@+id/portionsText"
                android:layout_toEndOf="@+id/Portions"
                android:layout_toRightOf="@+id/Portions"/>

            <TextView
                android:id="@+id/IngredientsTitle"
                style="@style/HeadingTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:layout_below="@+id/buttonIncrement"/>

            <LinearLayout
                android:id="@+id/Ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/IngredientsTitle"/>

            <TextView
                android:id="@+id/DescriptionTitle"
                style="@style/HeadingTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_below="@+id/Ingredients"/>

            <TextView
                android:id="@+id/Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/DescriptionTitle"
                android:text="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."/>


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>